<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Instructions"
    tools:showIn="@layout/activity_instructions">

    <TextView
        android:id="@+id/moisture_activity3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/instructions"
        android:textColor="@color/white"

        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/return_to_additionalfeatures3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blue"
        android:onClick="onBack"
        android:text="@string/return_to_additional_features"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/return_to_additionalfeatures3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moisture_activity3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onYoutube"
                android:text="@string/video_instructions" />

            <Button
                android:id="@+id/instructionsDoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onInstructionsDoc"
                android:text="@string/instructions_document" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>