<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.waterrootapp2.PlantInfo">

    <TextView
        android:id="@+id/moisture_activity2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/plant_information"
        android:textColor="@color/white"

        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/return_to_additionalfeatures2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blue"
        android:onClick="onBack"
        android:text="@string/return_to_additional_features"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/return_to_additionalfeatures2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moisture_activity2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textOutput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/website_description"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="371dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:onClick="onSpruce"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/leaf_clipart2" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/spruce"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/googleButton"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:onClick="onGoogle"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/google_logo" />

                <TextView
                    android:id="@+id/googleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/google"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/databaseButton"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:onClick="onDatabase"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/database" />

                <TextView
                    android:id="@+id/databaseText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/databaseText"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>