<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.waterrootapp2.WaterLogActivity2">


    <TextView
        android:id="@+id/waterlog_activity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/waterlog_header"
        android:textColor="@color/white"

        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/refresh"
        app:layout_constraintTop_toBottomOf="@+id/waterlog_activity"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textOutput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/large_text"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="371dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blue"
        android:onClick="onRefresh"
        android:text="@string/refresh"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/return_to_additionalfeatures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/return_to_additionalfeatures"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blue"
        android:onClick="onBack"
        android:text="@string/return_to_additional_features"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>